New CSS class for Similar pages

--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
         </section>
         <section class="similar page-section">
             <h2 class="product-subttl">Articles similaires</h2>
+            <button type="button" class="similar-btn-mobile similar-btn-prev">◀️</button>
             <ul class="similar-lst">
                 <li class="similar-itm">
                     <a class="similar-lnk" href="#">
@@ -94,21 +95,21 @@
                         <div class="similar-price">19€95</div>
                     </a>
                 </li>
-                <li class="similar-itm">
+                <li class="similar-itm mobile-hidden">
                     <a class="similar-lnk" href="#">
                         <img class="similar-img" src="img/canard-geek.png" alt="canard geek">
                         <h3 class="similar-ttl">Canard Geek</h3>
                         <div class="similar-price">19€95</div>
                     </a>
                 </li>
-                <li class="similar-itm">
+                <li class="similar-itm mobile-hidden">
                     <a class="similar-lnk" href="#">
                         <img class="similar-img" src="img/canard-licorne.png" alt="canard licorne">
                         <h3 class="similar-ttl">Canard Licorne</h3>
                         <div class="similar-price">19€95</div>
                     </a>
                 </li>
-                <li class="similar-itm">
+                <li class="similar-itm mobile-hidden">
                     <a class="similar-lnk" href="#">
                         <img class="similar-img" src="img/canard-bowie.png" alt="canard David Bowie">
                         <h3 class="similar-ttl">Ziggy StarDuck</h3>
@@ -116,6 +117,8 @@
                     </a>
                 </li>
             </ul>
+            <button type="button" class="similar-btn-mobile similar-btn-next">▶️</button>
+
         </section>
     </main>
     <aside class="reinsur">
