New Event Listener for Similar Navigation and Transition

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         </section>
         <section class="similar page-section">
             <h2 class="product-subttl">Articles similaires</h2>
-            <button type="button" class="similar-btn-mobile similar-btn-prev">◀️</button>
+            <button type="button" class="similar-btn-mobile similar-btn-prev hidden">◀️</button>
             <ul class="similar-lst">
                 <li class="similar-itm">
                     <a class="similar-lnk" href="#">
