--- a/index.html
+++ b/index.html
@@ -32,19 +32,19 @@
                 <button type="button" class="pictures-handler pictures-next">▶️</button>
                 <ul class="thumbs">
                     <li class="thumbs-itm">
-                        <img class="thumbs-img" src="img/canard-jaune-1-s.png" data-img-large-src="img/canard-jaune-1-l.png" alt="canard">
+                        <img id='1' class="thumbs-img" src="img/canard-jaune-1-s.png" data-img-large-src="img/canard-jaune-1-l.png" alt="canard">
                     </li>
                     <li class="thumbs-itm">
-                        <img class="thumbs-img" src="img/canard-jaune-2-s.png" data-img-large-src="img/canard-jaune-2-l.png" alt="canard">
+                        <img id='2' class="thumbs-img" src="img/canard-jaune-2-s.png" data-img-large-src="img/canard-jaune-2-l.png" alt="canard">
                     </li>
                     <li class="thumbs-itm">
-                        <img class="thumbs-img" src="img/canard-jaune-3-s.png" data-img-large-src="img/canard-jaune-3-l.png" alt="canard">
+                        <img id='3' class="thumbs-img" src="img/canard-jaune-3-s.png" data-img-large-src="img/canard-jaune-3-l.png" alt="canard">
                     </li>
                     <li class="thumbs-itm">
-                        <img class="thumbs-img" src="img/canard-jaune-4-s.png" data-img-large-src="img/canard-jaune-4-l.png" alt="canard">
+                        <img id='4' class="thumbs-img" src="img/canard-jaune-4-s.png" data-img-large-src="img/canard-jaune-4-l.png" alt="canard">
                     </li>
                     <li class="thumbs-itm">
-                        <img class="thumbs-img" src="img/canard-jaune-5-s.png" data-img-large-src="img/canard-jaune-5-l.png" alt="canard">
+                        <img id="5" class="thumbs-img" src="img/canard-jaune-5-s.png" data-img-large-src="img/canard-jaune-5-l.png" alt="canard">
                     </li>
                 </ul>
             </div>
