--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dev Gadgets - Canard jaune pour la revue de code</title>
     <link rel="stylesheet" href="css/style.css">
+
 </head>
+
 <body>
     <header class="header">
         <div class="header-content">
@@ -32,19 +35,24 @@
                 <button type="button" class="pictures-handler pictures-next">▶️</button>
                 <ul class="thumbs">
                     <li class="thumbs-itm">
-                        <img id='1' class="thumbs-img" src="img/canard-jaune-1-s.png" data-img-large-src="img/canard-jaune-1-l.png" alt="canard">
+                        <img class="thumbs-img" src="img/canard-jaune-1-s.png"
+                            data-img-large-src="img/canard-jaune-1-l.png" data-img-id='' alt="canard">
                     </li>
                     <li class="thumbs-itm">
-                        <img id='2' class="thumbs-img" src="img/canard-jaune-2-s.png" data-img-large-src="img/canard-jaune-2-l.png" alt="canard">
+                        <img class="thumbs-img" src="img/canard-jaune-2-s.png"
+                            data-img-large-src="img/canard-jaune-2-l.png" data-img-id='' alt="canard">
                     </li>
                     <li class="thumbs-itm">
-                        <img id='3' class="thumbs-img" src="img/canard-jaune-3-s.png" data-img-large-src="img/canard-jaune-3-l.png" alt="canard">
+                        <img class="thumbs-img" src="img/canard-jaune-3-s.png"
+                            data-img-large-src="img/canard-jaune-3-l.png" data-img-id='' alt="canard">
                     </li>
                     <li class="thumbs-itm">
-                        <img id='4' class="thumbs-img" src="img/canard-jaune-4-s.png" data-img-large-src="img/canard-jaune-4-l.png" alt="canard">
+                        <img class="thumbs-img" src="img/canard-jaune-4-s.png"
+                            data-img-large-src="img/canard-jaune-4-l.png" data-img-id='' alt="canard">
                     </li>
                     <li class="thumbs-itm">
-                        <img id="5" class="thumbs-img" src="img/canard-jaune-5-s.png" data-img-large-src="img/canard-jaune-5-l.png" alt="canard">
+                        <img class="thumbs-img" src="img/canard-jaune-5-s.png"
+                            data-img-large-src="img/canard-jaune-5-l.png" alt="canard">
                     </li>
                 </ul>
             </div>
@@ -57,7 +65,10 @@
             </div>
         </section>
         <section class="page-txt page-section">
-            <p class="product-descr">Ce canard va devenir votre meilleur allié pour le développement de vos projets les plus ambitieux ! Fidèle compagnon qui trônera à côté de vos écrans, vous pourrez lui expliquer les problèmes que vous rencontrez avec votre code : refactoring, bugs, algo complexe, … Ce nouveau collègue discret et joyeux vous aidera à trouver les solutions à toutes vos problématiques !</p>
+            <p class="product-descr">Ce canard va devenir votre meilleur allié pour le développement de vos projets les
+                plus ambitieux ! Fidèle compagnon qui trônera à côté de vos écrans, vous pourrez lui expliquer les
+                problèmes que vous rencontrez avec votre code : refactoring, bugs, algo complexe, … Ce nouveau collègue
+                discret et joyeux vous aidera à trouver les solutions à toutes vos problématiques !</p>
             <div>
                 <h2 id='advantages-accordion' class="product-subttl product-acrd-lnk">Avantages</h2>
                 <ul class="product-advantages">
@@ -154,4 +165,5 @@
 
     <script src="js/script.js" async defer></script>
 </body>
+
 </html>
